# swarm-p2p

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy-bootstrap.yml  release-bootstrap.yml
bootstrap/: Cargo.toml  README.md  swarm-bootstrap.service
bootstrap/src/: behaviour.rs  lib.rs  main.rs
bootstrap/src/util/: identity.rs  mod.rs  signal.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  event.rs  lib.rs  pending_map.rs  util.rs
core/src/client/: future.rs  gossipsub.rs  kad.rs  mod.rs  req_resp.rs
core/src/command/: add_peer_addrs.rs  dial.rs  disconnect.rs  get_listen_addrs.rs  handler.rs  is_connected.rs  mod.rs
core/src/command/gossipsub/: mod.rs  publish.rs  subscribe.rs  unsubscribe.rs
core/src/command/kad/: bootstrap.rs  get_closest_peers.rs  get_providers.rs  get_record.rs  mod.rs  put_record.rs  remove_record.rs  start_provide.rs  stop_provide.rs
core/src/command/req_resp/: mod.rs  send_request.rs  send_response.rs
core/src/runtime/: behaviour.rs  client.rs  event_loop.rs  mod.rs  node.rs  transport.rs
core/tests/: gossipsub_test.rs  kad.rs  req_resp.rs
core/tests/common/: mod.rs
docs/: 00-design-patterns-and-highlights.md  01-command-pattern-architecture.md  02-request-response-protocol.md  03-kademlia-dht-commands.md  bootstrap-relay-node.md
docs/bugfix/: 001-command-future-waker-hang.md  002-mdns-dial-without-address.md  003-kad-client-mode-quorum-failed.md
docs/design/: device-discovery-and-connection.md  request-response-integration.md
docs/kad-guide/: 01-overview.md  02-bootstrap.md  README.md  (+5 more)
