[package]
name = "swarm-bootstrap"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "swarm-bootstrap"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.56.0", features = [
    "kad",
    "noise",
    "quic",
    "tcp",
    "tokio",
    "yamux",
    "identify",
    "ping",
    "relay",
    "macros",
    "dns",
    "autonat"
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
